--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<app-navbar></app-navbar>
+<app-inicio-sesion></app-inicio-sesion>
+
+<!--<app-navbar></app-navbar>
 <app-carrusel></app-carrusel>
 <app-principal></app-principal>
-<app-footer> </app-footer>
+<app-footer> </app-footer>-->
