--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,12 @@
-<app-inicio-sesion></app-inicio-sesion>
+<!--<app-inicio-sesion></app-inicio-sesion>-->
 
-<!--<app-navbar></app-navbar>
-<app-carrusel></app-carrusel>
-<app-principal></app-principal>
-<app-footer> </app-footer>-->
+<app-navbar></app-navbar>
+<!--<app-carrusel></app-carrusel>-->
+<!--<app-principal></app-principal>-->
+
+<app-categorias></app-categorias>
+<br>
+<br>
+<br>
+<br>
+<app-footer> </app-footer>
