--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,5 @@
-<!--<app-inicio-sesion></app-inicio-sesion>-->
-
 <app-navbar></app-navbar>
-<!--<app-carrusel></app-carrusel>-->
-<!--<app-principal></app-principal>-->
-
-<app-categorias></app-categorias>
-<br>
-<br>
-<br>
-<br>
+<div>
+    <router-outlet></router-outlet>
+</div>
 <app-footer> </app-footer>
