--- a/src/app/carrusel/carrusel.component.html
+++ b/src/app/carrusel/carrusel.component.html
@@ -6,19 +6,19 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="../assets/img/principal1.jpg" class="d-block w-100">
+      <img src="../assets/img/blouse-clothing-dress-fashion.jpg" class="d-block w-100">
       <div class="carousel-caption d-none d-md-block">
         <h5>Ventas Online</h5>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="../assets/img/principal2.jpg" class="d-block w-100" alt="...">
+      <img src="../assets/img/Hanger_clothing_fashion_market_4K_HD_1366x768.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Ventas Online</h5>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="../assets/img/principal3.jpg" class="d-block w-100" alt="...">
+      <img src="../assets/img/loja-de-roupas-arara-1513994.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Ventas Online</h5>
       </div>
