--- a/src/app/inicio-sesion/inicio-sesion.component.html
+++ b/src/app/inicio-sesion/inicio-sesion.component.html
@@ -6,7 +6,7 @@
   
       <!-- Icon -->
       <div class="fadeIn first">
-        <img src="https://icon2.cleanpng.com/20180319/epw/kisspng-india-login-computer-icons-emoticon-medicine-user-login-icon-5ab05c8bc2f8d1.4479395815215074677986.jpg" id="icon" alt="User Icon" />
+        <img src="../assets/img/l.jpg" id="icon" alt="User Icon" />
       </div>
   
       <!-- Login Form -->
