--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -1,3 +1,20 @@
-<app-carrusel></app-carrusel>
-<p>principal works!</p>
-<p>Aqui se trabajara el contenido sin loguearse</p>
+<br>
+<div class="row row-cols-1 row-cols-md-2">
+    <div class="col mb-4">
+      <div class="card">
+        <img src="../assets/img/javi.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Moda es lo que Compras, estilo es lo que haces con ella.</h5>
+          <p class="card-text">Visite nuestros catálogos de ropa de diferentes temporadas de ropa ¡No te arrepentirás!.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col mb-4">
+      <div class="card">
+        <img src="../assets/img/apparel-choosing-clothing-fashion.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Una atención personalizada nunca pasa de moda...</h5>
+        </div>
+      </div>
+    </div>
+  </div>
