--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -2,7 +2,7 @@
 <div class="row row-cols-1 row-cols-md-2">
     <div class="col mb-4">
       <div class="card">
-        <img src="../assets/img/javi.jpg" class="card-img-top" alt="...">
+        <img src="../docs/assets/img/javi.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Moda es lo que Compras, estilo es lo que haces con ella.</h5>
           <p class="card-text">Visite nuestros catálogos de ropa de diferentes temporadas de ropa ¡No te arrepentirás!.</p>
